// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/table/TableRow should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row"
      data-test="database-row-card-1"
      draggable="true"
      style="opacity: 1; background-color: transparent;"
    >
      <div
        class="icons row-actions MuiBox-root css-0"
      >
        <div
          class="charm-drag-handle MuiBox-root css-0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-d1t9d3-MuiSvgIcon-root"
            data-testid="DragIndicatorIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-jm1ma0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
                />
              </svg>
            </div>
            <div
              style="width: 100%;"
            >
              <div>
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-2umbt5-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-yz9k0d-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <button
              class="Button size--small"
              type="button"
            >
              <span>
                Open
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, collapsed tree 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      draggable="true"
      style="opacity: 1; background-color: transparent;"
    >
      <div
        class="icons row-actions MuiBox-root css-0"
      >
        <div
          class="charm-drag-handle MuiBox-root css-0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-d1t9d3-MuiSvgIcon-root"
            data-testid="DragIndicatorIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-jm1ma0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
                />
              </svg>
            </div>
            <div
              style="width: 100%;"
            >
              <div>
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-2umbt5-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-yz9k0d-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <button
              class="Button size--small"
              type="button"
            >
              <span>
                Open
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, display properties 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      draggable="true"
      style="opacity: 1; background-color: transparent;"
    >
      <div
        class="icons row-actions MuiBox-root css-0"
      >
        <div
          class="charm-drag-handle MuiBox-root css-0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-d1t9d3-MuiSvgIcon-root"
            data-testid="DragIndicatorIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-jm1ma0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
                />
              </svg>
            </div>
            <div
              style="width: 100%;"
            >
              <div>
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-2umbt5-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-yz9k0d-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <button
              class="Button size--small"
              type="button"
            >
              <span>
                Open
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          class="css-1s6sld2-MuiStack-root"
          data-test="closed-select-input"
        >
          <div
            class="css-1a59yxd-MuiStack-root"
            data-test="select-preview"
          >
            <div
              class=" css-b3ouwx-MuiStack-root"
              data-mui-internal-clone-element="true"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorTurquoise MuiChip-filledTurquoise css-1v6zf4t-MuiChip-root"
              >
                <span
                  class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
                >
                  value 1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          class="css-1s6sld2-MuiStack-root"
          data-test="closed-select-input"
        >
          <div
            class="css-1a59yxd-MuiStack-root"
            data-test="select-preview"
          >
            <div
              class=" css-b3ouwx-MuiStack-root"
              data-mui-internal-clone-element="true"
            />
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, isSelected 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row selected"
      data-test="database-row-card-1"
      draggable="true"
      style="opacity: 1; background-color: transparent;"
    >
      <div
        class="icons row-actions MuiBox-root css-0"
      >
        <div
          class="charm-drag-handle MuiBox-root css-0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-d1t9d3-MuiSvgIcon-root"
            data-testid="DragIndicatorIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-jm1ma0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
                />
              </svg>
            </div>
            <div
              style="width: 100%;"
            >
              <div>
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-2umbt5-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-yz9k0d-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <button
              class="Button size--small"
              type="button"
            >
              <span>
                Open
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, read-only 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row"
      data-test="database-row-card-1"
      draggable="true"
      style="opacity: 1; background-color: transparent;"
    >
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-jm1ma0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
                />
              </svg>
            </div>
            <div
              style="width: 100%;"
            >
              <div>
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-readOnly css-2umbt5-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Mui-readOnly Editable readonly octo-propertyvalue css-yz9k0d-MuiInputBase-input"
                    placeholder="Untitled"
                    readonly=""
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <button
              class="Button size--small"
              type="button"
            >
              <span>
                Open
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;

exports[`components/table/TableRow should match snapshot, resizing column 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="TableRow octo-table-row hidden"
      data-test="database-row-card-1"
      draggable="true"
      style="opacity: 1; background-color: transparent;"
    >
      <div
        class="icons row-actions MuiBox-root css-0"
      >
        <div
          class="charm-drag-handle MuiBox-root css-0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-d1t9d3-MuiSvgIcon-root"
            data-testid="DragIndicatorIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="octo-table-cell title-cell MuiBox-root css-v7v99c"
      >
        <div
          style="display: flex; width: 100%;"
        >
          <div
            class="octo-icontitle"
            style="align-self: flex-start; align-items: flex-start;"
          >
            <div
              class="css-jm1ma0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvmj5c-MuiSvgIcon-root"
                data-testid="InsertDriveFileOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
                />
              </svg>
            </div>
            <div
              style="width: 100%;"
            >
              <div>
                <div
                  class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-2umbt5-MuiInputBase-root"
                  spellcheck="true"
                >
                  <input
                    class="MuiInputBase-input Editable octo-propertyvalue css-yz9k0d-MuiInputBase-input"
                    placeholder="Untitled"
                    type="text"
                    value="Page Title"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="open-button"
            data-test="database-open-button-card-1"
          >
            <button
              class="Button size--small"
              type="button"
            >
              <span>
                Open
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          class="css-1s6sld2-MuiStack-root"
          data-test="closed-select-input"
        >
          <div
            class="css-1a59yxd-MuiStack-root"
            data-test="select-preview"
          >
            <div
              class=" css-b3ouwx-MuiStack-root"
              data-mui-internal-clone-element="true"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorTurquoise MuiChip-filledTurquoise css-1v6zf4t-MuiChip-root"
              >
                <span
                  class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
                >
                  value 1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="align-items: flex-start; width: 100px; overflow-x: hidden;"
      >
        <div
          class="css-1s6sld2-MuiStack-root"
          data-test="closed-select-input"
        >
          <div
            class="css-1a59yxd-MuiStack-root"
            data-test="select-preview"
          >
            <div
              class=" css-b3ouwx-MuiStack-root"
              data-mui-internal-clone-element="true"
            />
          </div>
        </div>
      </div>
      <div
        class="octo-table-cell"
        style="flex-grow: 1;"
      />
    </div>
  </span>
</div>
`;
